Show an editable field instead of combobox in the password bubble on Mac.

Bug: 773966
Change-Id: I01f1dbd473670e0c82e0934e13162836dfd6ed7a
Reviewed-on: https://chromium-review.googlesource.com/716481
Reviewed-by: Maxim Kolosovskiy <kolos@chromium.org>
Commit-Queue: Vasilii Sukhanov <vasilii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508392}
Former-commit-id: f3107632464a2d623fa58c2476ab324ef2be71bd