chrome/browser/ui/cocoa/passwords/passwords_list_view_controller.mm
@@ -37,15 +37,6 @@ CGFloat ManagePasswordItemWidth() {
                   undoExplanationWidth + kItemLabelSpacing + undoLinkWidth);
 }
 
-NSTextField* EditableUsernameField() {
-  base::scoped_nsobject<NSTextField> textField(
-      [[NSTextField alloc] initWithFrame:NSZeroRect]);
-  InitLabel(textField, base::string16());
-  [textField setEditable:YES];
-  [textField setSelectable:YES];
-  return textField.autorelease();
-}
-
 }  // namespace
 
 @implementation UndoPasswordItemView
@@ -204,14 +195,10 @@ NSTextField* EditableUsernameField() {
   return usernameField_.get();
 }
 
-- (id)initWithForm:(const autofill::PasswordForm&)form editMode:(BOOL)editMode {
+- (id)initWithForm:(const autofill::PasswordForm&)form {
   if ((self = [super initWithFrame:NSZeroRect])) {
     // Add the username.
-    if (editMode) {
-      usernameField_.reset([EditableUsernameField() retain]);
-    } else {
-      usernameField_.reset([Label(GetDisplayUsername(form)) retain]);
-    }
+    usernameField_.reset([Label(GetDisplayUsername(form)) retain]);
     [self addSubview:usernameField_];
     if (form.federation_origin.unique()) {
       passwordField_.reset([PasswordLabel(form.password_value) retain]);
@@ -320,9 +307,8 @@ NSTextField* EditableUsernameField() {
 - (void)updateContent {
   switch (state_) {
     case MANAGE_PASSWORD_ITEM_STATE_PENDING:
-      contentView_.reset([[PendingPasswordItemView alloc]
-          initWithForm:*passwordForm_
-              editMode:FALSE]);
+      contentView_.reset(
+          [[PendingPasswordItemView alloc] initWithForm:*passwordForm_]);
       return;
     case MANAGE_PASSWORD_ITEM_STATE_MANAGE:
       contentView_.reset([[ManagePasswordItemView alloc]
